--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,8 @@ header {
 /* ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 .sectionseven {
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 80px;
+  position: relative;
 }
 .sectionseven h1 {
   font-size: 60px;
@@ -292,21 +293,39 @@ header {
   padding-bottom: 30px;
   text-transform: uppercase;
 }
+.errowicon {
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 130px;
+  font-size: 30px;
+  color: #ffffff;
+  animation: movement 1s linear infinite;
+  animation-direction: ;
+  position: absolute;
+}
+@keyframes movement {
+  0% {
+    left: 25%;
+  }
+  100% {
+    left: 28%;
+  }
+}
 .sectionseven a {
   color: #ffffff;
-  background-color: #e92bde;
+  background-color: #0101a3;
   padding: 8px 40px;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 400;
 }
-.aaa {
-  padding-bottom: 50px;
+.aaaa {
+  padding-top: 30px;
 }
 form {
   background-color: #e92bde;
-  padding: 70px;
+  padding: 40px;
 }
 form h3 {
   font-size: 40px;
