--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,14 @@ body {
   color: #ffffff;
   font-size: 20px;
   font-weight: 400;
-  text-align: center;
   border: 2px solid transparent;
   padding: 6px 16px;
+}
+.nav-link {
+  display: inline-block;
+}
+.nav-item {
+  margin: auto;
 }
 .navbar-light .navbar-nav .nav-link:hover {
   color: #ffffff;
